# rubl-mcp

./: .gitignore  Cargo.toml  README.md  build-mcpb.sh  manifest.json
.github/: publish.yml
.github/workflows/: publish.yml  rust.yml
src/: content.rs  ebird_api.rs  logging.rs  main.rs  server.rs
src/api/: client.rs  endpoint.rs  error.rs
src/prompts/: trip.rs
src/tools/: geo.rs  geography.rs  hotspot.rs  mod.rs  observations.rs  product.rs  rare_birds.rs  region.rs  taxonomy.rs  trip.rs
