[package]
name = "rubl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
reqwest = { version = "0.13.2", features = ["json", "query"] }
rmcp = { version = "0.14.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toon = "0.1.2"
