[package]
name = "rubl"
version = "0.1.0-alpha.6"
edition = "2024"
description = "eBird API MCP server — Model Context Protocol server for eBird hotspots, regions, and rare bird data"
license = "MIT"
repository = "https://github.com/drewbxyz/rubl"
keywords = ["ebird", "mcp", "birds", "birding", "api"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"

[lints.rust]
future-incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -2 }

[lints.clippy]
all = { level = "deny", priority = 10 }
perf = { level = "warn", priority = 8 }
redundant_clone = { level = "deny", priority = 9 }

# Configuration for cargo-release
[package.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-message = "Release {{version}}"
tag-name = "v{{version}}"
tag-prefix = "v"
push = true
publish = true
dev-version = false  # Disable prerelease versions (no -alpha, -beta suffixes)
# Update manifest.json version to match Cargo.toml
pre-release-replacements = [
  { file = "manifest.json", search = "\"version\": \".*\"", replace = "\"version\": \"{{version}}\"" },
]

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "query"] }
rmcp = { version = "0.14.0", features = ["server", "transport-io", "macros"] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toon = "0.1.2"
